namespace java cn.com.sand.frame.athena.rpc.idl

exception AthenaServiceException 
{
	1: string what,
	2: string why
}